Работает создание + редактирование квеста. Модальные формы

--- a/src/styles/buttons.styl
+++ b/src/styles/buttons.styl
@@ -9,6 +9,7 @@
     text-shadow none
     transition all 0.3s cubic-bezier(0.19, 1, 0.22, 1)
     cursor pointer
+    box-sizing border-box
     white-space nowrap
     background linear-gradient(90deg,rgba(71,56,20,.4),rgba(84,69,25,.7))
 .button.bg
