--- a/src/styles/constants.styl
+++ b/src/styles/constants.styl
@@ -24,9 +24,10 @@ bgColor2 = #29190c
 bgColor3 = #473a31
 
 empColor1 = #b8860b
-empColor2 = #d2a01c
+empColor2 = #d4a740
 empColor3 = #b08946
 empColor4 = #d2825c
+empColor5 = #a78331
 
 secColor1 = #c3a17b
 
