--- a/src/styles/modal.styl
+++ b/src/styles/modal.styl
@@ -15,6 +15,9 @@ close-btn-size = 25px
     .modal
         margin-top 200px
 
+        .form
+            background linear-gradient(35deg,rgb(14 12 5),#583a18 50%,rgb(22 18 7))
+
         .close-btn
             position absolute
             color textColor2
@@ -24,14 +27,15 @@ close-btn-size = 25px
             width close-btn-size
             height close-btn-size
             transition all 0.3s ease
+            cursor pointer
         .close-btn:hover
             color textColor1
             text-shadow textLightingNormal1
 
-        .form-content
-            margin-top 40px
-        .title
-            margin-bottom 15px
-            .primary
-                font-size 1.2rem
-                font-weight normal
+        .submit-container
+            width 100%
+            display flex
+            > *
+                flex 1
+                margin-left 10px
+                margin-right 10px
