--- a/src/styles/modal.styl
+++ b/src/styles/modal.styl
@@ -16,6 +16,7 @@ close-btn-size = 25px
         margin-top 200px
 
         .form
+            max-width 90%
             background linear-gradient(35deg,rgb(14 12 5),#583a18 50%,rgb(22 18 7))
 
         .close-btn
