--- a/src/styles/modal.styl
+++ b/src/styles/modal.styl
@@ -17,7 +17,7 @@ close-btn-size = 25px
 
         .form
             max-width 90%
-            background linear-gradient(35deg,rgb(14 12 5),#583a18 50%,rgb(22 18 7))
+            background linear-gradient(20deg, bgColor1 0%, bgColor2 50%, bgColor1 100%)
 
         .close-btn
             position absolute
