--- a/src/styles/pages.styl
+++ b/src/styles/pages.styl
@@ -79,8 +79,8 @@
 #finish-button
   flex 0 !important
 
-// QUEST-CREATE
-#quest-create-form
+// [QUESTS, BRANCHES, TASKS] EDIT AND CREATE
+#data-edit-form
   margin-top 0
   max-width unset
   box-sizing border-box
