Есть ретинги, markdown редактор

--- a/src/styles/buttons.styl
+++ b/src/styles/buttons.styl
@@ -12,6 +12,8 @@
     box-sizing border-box
     white-space nowrap
     background linear-gradient(90deg,rgba(71,56,20,.4),rgba(84,69,25,.7))
+.button.half-height
+    padding 0 10px
 .button.bg
     background linear-gradient(20deg, rgba(45, 36, 13, 0.4) 0%, rgba(90, 56, 25, 0.7) 50%, rgba(55, 43, 16, 0.4) 100%)
 .button.rounded
