--- a/src/styles/forms.styl
+++ b/src/styles/forms.styl
@@ -58,7 +58,9 @@ form
 
 .form
     textarea,
-    input
+    input,
+    .input-area
+        padding 10px
         font-size 1rem
         color textColor1
         border 1px solid colorShadow
