--- a/src/styles/pages.styl
+++ b/src/styles/pages.styl
@@ -1,3 +1,5 @@
+@require 'constants.styl'
+
 // ABOUT
 .about-page
   text-align center
@@ -76,6 +78,10 @@
 // PLAY
 #task-description
   padding 20px
+  font-size 16px
+  color textColor2
+#form-answer
+  margin-top 10px
 #finish-button
   flex 0 !important
 
@@ -85,3 +91,8 @@
   max-width unset
   box-sizing border-box
 
+// TASK EDIT
+#description-input.markdowned
+  position relative
+  width 100%
+  padding-top 30px
