Сделал всё, всё работает

--- a/src/styles/footer.styl
+++ b/src/styles/footer.styl
@@ -6,8 +6,10 @@ body,
   flex-direction column
 #app
   flex auto
-  >:not(footer)
-    flex auto
+  > *
+    flex 0
+  .flex-filler
+    flex 1
 footer
   flex 0 0 auto
 
