--- a/src/styles/buttons.styl
+++ b/src/styles/buttons.styl
@@ -10,8 +10,8 @@
     transition all 0.3s cubic-bezier(0.19, 1, 0.22, 1)
     cursor pointer
     box-sizing border-box
-    white-space nowrap
     background linear-gradient(90deg,rgba(71,56,20,.4),rgba(84,69,25,.7))
+    box-shadow: inset 0 0 0 transparent, 5px 5px 5px colorShadow;
 .button.half-height
     padding 0 10px
 .button.bg
