--- a/src/styles/global.styl
+++ b/src/styles/global.styl
@@ -23,6 +23,8 @@ body
     width 100%
     height 100%
     transition opacity 0.2s ease
+#avatar
+    display none
 
 linkButton
     cursor pointer
@@ -142,6 +144,7 @@ linkButton
 .centered-horizontal
     margin-left auto
     margin-right auto
+    text-align center
 .centered-vertical
     margin-top auto
     margin-bottom auto
