--- a/src/styles/pages.styl
+++ b/src/styles/pages.styl
@@ -1,5 +1,8 @@
 @require 'constants.styl'
 
+.form.centered-horizontal > *
+  text-align left
+
 // ABOUT
 .about-page
   text-align center
@@ -24,10 +27,6 @@
 
 // PROFILE
 .profile-page
-  text-align center
-  > *
-    text-align left
-
   .form
     margin-top 30px
     margin-bottom 30px
@@ -40,6 +39,7 @@
       transition height 0.25s ease
   #logout-button
     margin-top 40px
+    text-align center
 
 // QUESTS
 .quests-page
