Добавил возможность добавления тегов в описании (санитайзер), а знанчит - видео или аудио по ссылке

--- a/src/styles/global.styl
+++ b/src/styles/global.styl
@@ -30,6 +30,10 @@ linkButton
     cursor pointer
     display inline-block
 
+.loading-image
+    filter blur(1px)
+    position absolute
+    width unquote('min(30vw, 30vh)')
 
 @keyframes bg-move
     from
