--- a/src/styles/pages.styl
+++ b/src/styles/pages.styl
@@ -43,6 +43,10 @@
 
 // QUESTS
 .quests-page
+  #quests-listing
+    .info
+      text-overflow ellipsis
+      white-space nowrap
   #choose-quest-block
     .title-container
       margin-bottom 0
@@ -74,6 +78,9 @@
   #details-block.closed
     opacity 0
     right -100%
+  #details-quest-description
+    padding 0 15px
+    text-align left
 
 // PLAY
 #task-description
