--- a/src/styles/navbar.styl
+++ b/src/styles/navbar.styl
@@ -80,6 +80,6 @@ side-items-font-size = 16px
         transition background-size ease 3s
 
 
-@media (max-width 700px)
+@media ({mobile})
     .navbar linkbutton
         font-size 20px
