--- a/src/styles/forms.styl
+++ b/src/styles/forms.styl
@@ -7,11 +7,13 @@ input-bg = linear-gradient(20deg, rgba(45, 36, 13, 0.4) 0%, rgba(62, 39, 17, 0.6
 .form
     margin-top 100px
     padding 40px 30px
+    box-sizing border-box
     width 100%
     max-width 460px
     border-radius 7px
     background linear-gradient(20deg, rgba(84, 67, 24, 0) 0%, rgb(88, 58, 24) 50%, rgba(84, 67, 24, 0) 100%) 50% 50% no-repeat
     box-shadow 0 0 10px 0 rgba(162, 116, 14, 0.7), 0 0 15px 0 rgba(34, 28, 4, 0.4) inset
+    transition all 0.3s ease
 
     .info-container
         text-align center
@@ -110,3 +112,7 @@ form
             //animation success 3s forwards
 
 
+@media ({mobile})
+    .form
+        padding-left 10px
+        padding-right 10px
