--- a/src/styles/listings.styl
+++ b/src/styles/listings.styl
@@ -69,6 +69,9 @@ side-items-background-right = unquote("linear-gradient(320deg, " + _side-items-b
     padding 0
     overflow hidden
     > li
+        display flex
+        justify-content flex-start
+        align-items center
         list-style-type none
         padding 10px
         margin 0
