Поправил переходы на мобилках

--- a/src/styles/global.styl
+++ b/src/styles/global.styl
@@ -158,7 +158,11 @@ linkButton
 
 @media ({mobile})
     *
-        transition opacity 0.3s ease, transform 0.3s ease, width 0.3s ease, height 0.3s ease !important
+        transition opacity 0.3s ease, transform 0.3s ease !important
+    .roll-closed
+        transition height 0.3s ease !important
+    .float-button
+        transition opacity 0.3s ease, right 0.3s ease !important
 
     .mobile-hide
         display none
