--- a/src/styles/scrollbars.styl
+++ b/src/styles/scrollbars.styl
@@ -3,9 +3,9 @@
 scroll-bg-color = bgColor2
 scroll-thumb-color = empColor1
 scroll-thumb-color-hover = empColor2
-scrollbar-width-worded = thin
-scrollbar-width = 6px
-scrollbar-border = 1px
+scrollbar-width-worded = bold
+scrollbar-width = 10px
+scrollbar-border = 2px
 
 .scrollable
   overflow-y auto
