--- a/src/styles/listings.styl
+++ b/src/styles/listings.styl
@@ -81,6 +81,13 @@ side-items-background-right = unquote("linear-gradient(320deg, " + _side-items-b
         box-shadow 0 0 10px 0 rgba(162, 116, 14, 200), 0 0 15px 0 rgb(34, 28, 4, 125) inset
         transition all 0.3s ease
         cursor pointer
+        svg
+            margin-right 10px
+        .main-info
+            max-width 70%
+            .info
+                overflow hidden
+                text-overflow ellipsis
         .choose
             opacity 0.3
             margin-left 30px
