Добавил шрифт и тексты ошибок

--- a/src/styles/global.styl
+++ b/src/styles/global.styl
@@ -163,6 +163,8 @@ linkButton
         transition height 0.3s ease !important
     .float-button
         transition opacity 0.3s ease, right 0.3s ease !important
+    .progressbar
+        transition background-size 0.3s ease !important
 
     .mobile-hide
         display none
