--- a/src/styles/navbar.styl
+++ b/src/styles/navbar.styl
@@ -5,6 +5,10 @@ counter-font = GothicE
 
 side-items-font-size = 16px
 
+@font-face
+    font-family counter-font
+    src url(../fonts/GothicE.ttf)
+
 @keyframes open-navbar
     from
         width 0
@@ -66,6 +70,7 @@ side-items-font-size = 16px
 
     .progress
         margin-top -5px
+        font-size 30px
         font-family counter-font
 
     .progressbar // uses --progress
