--- a/src/styles/switches.styl
+++ b/src/styles/switches.styl
@@ -136,6 +136,10 @@
     }
 
     .radio input {
+        margin-left 0
+        margin-right 0
+        width 45%
+        box-sizing border-box
         color textColor3
         transition all 0.3s ease
         appearance: none;
