--- a/src/styles/forms.styl
+++ b/src/styles/forms.styl
@@ -95,8 +95,14 @@ form
         border-color empColor1
         box-shadow  0 0 10px 0 rgb(179, 139, 38) inset, 0 0 15px 0 rgba(162, 116, 14, 0.8)
 
+    .error-info
+        opacity 0
+        transition all 0.3s
+    .error-info.error
+        opacity 1
 
     .error
+        color #ff8e72
         *
             color #ff8e72
         textarea,
@@ -104,6 +110,7 @@ form
             border-color #ff8e72
             //animation error 3s forwards
     .success
+        color #c4ff72
         *
             color #c4ff72
         textarea,
