--- a/src/styles/listings.styl
+++ b/src/styles/listings.styl
@@ -117,6 +117,7 @@ side-items-background-right = unquote("linear-gradient(320deg, " + _side-items-b
 .addable-list
     padding 0
     list-style none
+    overflow-x hidden
     > li
         margin-top 10px
         margin-bottom 10px
