Добавил доступ к квестам по QR

--- a/src/styles/markdown-redactor.styl
+++ b/src/styles/markdown-redactor.styl
@@ -87,7 +87,7 @@ list-decoration-margin = 5px 0
 list-decoration-offset = 40px
 list-decoration-color = bgColor2
 link-decoration-color = secColor1
-link-decoration-color-visited = color5-A
+link-decoration-color-visited = visited-link-color
 p-decoration-margin = 3px 0
 img-decoration-margin = 0
 hr-color = linear-gradient(90deg, transparent, empColor1, transparent)
