--- a/src/styles/pages.styl
+++ b/src/styles/pages.styl
@@ -99,6 +99,22 @@
   margin-top 0
   max-width unset
   box-sizing border-box
+  #link-access-on-fields
+    position relative
+  .link-button
+    padding 4px 4px 0px 3px
+    border-radius 5px
+    position absolute
+    right 10px
+    top 0
+    .link-image
+      width 20px
+      height 20px
+  #qr-code-image
+    max-width 500px
+    max-height 500px
+  #link-access-link
+    padding-right 30px
 
 // TASK EDIT
 #description-input.markdowned
