Добавил значок linked вместо глазика

--- a/src/styles/pages.styl
+++ b/src/styles/pages.styl
@@ -56,6 +56,10 @@
       padding 20px
     .listing > li
       padding-left 40px
+    .quest-modifier
+      width 36px
+      height 36px
+      margin-right 10px
 
   #choose-quest-block,
   #details-block
