Добавил возможность задания ответа на задание в виде QR-кода

--- a/src/styles/global.styl
+++ b/src/styles/global.styl
@@ -144,6 +144,11 @@ linkButton
     width 100%
     box-sizing border-box
 
+.flex-string
+    display flex
+    flex-wrap wrap
+    > *
+        flex 1
 
 .centered-horizontal
     margin-left auto
