--- a/src/styles/pages.styl
+++ b/src/styles/pages.styl
@@ -120,6 +120,9 @@
   #link-access-link
     padding-right 30px
 
+  #qr-code-scanner
+    max-width 100%
+
 // TASK EDIT
 #description-input.markdowned
   position relative
